Add route param to exclude meta information
